2006-04-14  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.schemas.in:
	Update pattern docs (#337638).

2006-04-14  Ross Burton  <ross@burtonini.com>

	* src/sj-about.c:
	Update about dialog (#328181, Brian Pepple)

	* configure.ac:
	Bump GTK+ dep.

2006-04-14  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.schemas.in:
	* src/sj-main.c:
	* src/sj-play.c:
	* src/sound-juicer.h:
	Save and restore playback volume (#335170, Marinus Schraal).

2006-04-14  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Improve the --help output (#335016, Vincent Untz).

2006-04-14  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Translate a string (#334509)

	=== BRANCHPOINT ===
	
2006-04-14  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.14.3.

2006-04-14  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Fix reversed check for invalid iterator. Fixes "Play doesn't work"
	and "only plays track 1" (#338144).

2006-04-14  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Add some buffering (#336319).

2006-04-14  Ross Burton  <ross@burtonini.com>

	* src/gsttaglib.cc:
	* src/gsttaglib.h:
	Re-namespace to avoid conflicting with the real taglibmux.

2006-04-14  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Ensure the window title is reset when we read a CD (#337566).

2006-04-09  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* configure.in: Award myself the "useless use of cat" award.

2006-04-09  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Add more calls to sj_main_set_title(NULL) (#337566)

2006-04-09  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* po/LINGUAS: New file listing all supported languages.

	* configure.in: Use po/LINGUAS instead of including all languages
	directly in this file. See the wiki for more information:
	http://live.gnome.org/GnomeGoals/PoLinguas

2006-04-08  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Remove gcc-ism (#337393, Damien Carbery)
