@@ -1,3 +1,10 @@
+2006-04-15  James Livingston  <doclivingston@gmail.com>
+
+	reviewed by: Ross Burton  <ross@burtonini.com>
+
+	* src/sj-extracting.c: (filepath_parse_pattern): use GString to create
+	the file path, instead of a fixed buffer (#336725)
+
 2006-04-14  Ross Burton  <ross@burtonini.com>
 
 	* data/sound-juicer.schemas.in:
